main/default/objects/Session_Participant__c/Session_Participant__c.object-meta.xml
<CustomObject>
    <label>Participant Session</label>
    <nameField>
        <displayFormat>SM-{000000}</displayFormat>
        <label>Session Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>