main/default/objects/Session_Participant__c/fields/Attendance_Date__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Date__c</fullName>
    <label>Attendance Date</label>
    <type>DateTime</type>
</CustomField>