main/default/objects/Session_Participant__c/fields/Can_Receive_Updated_Calendar_Invite__c.field-meta.xml
<CustomField>
    <fullName>Can_Receive_Updated_Calendar_Invite__c</fullName>
    <description>This field indicates whether or not a Session Participant should be able to receive an updated Calendar Invite</description>
    <formula>OR(
 AND(
  ISPICKVAL(Status__c, &apos;Confirmed&apos;),
  ISPICKVAL(Event__r.Session_Calendar_Invite_Delivery__c, &apos;Send on session confirmation&apos;)
 ), 
 AND(
  OR(
   ISPICKVAL(Status__c, &apos;Registered&apos;), 
   ISPICKVAL(Status__c, &apos;Confirmed&apos;)
  ), 
  ISPICKVAL(Event__r.Session_Calendar_Invite_Delivery__c, &apos;Send on session registration&apos;)
 )
)</formula>
    <label>Can Receive Updated Calendar Invite</label>
    <type>Checkbox</type>
</CustomField>