main/default/objects/Session_Participant__c/fields/Canceled_Date__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Date__c</fullName>
    <label>Canceled Date</label>
    <type>DateTime</type>
</CustomField>