main/default/objects/Session_Participant__c/fields/Catchup_Date__c.field-meta.xml
<CustomField>
    <fullName>Catchup_Date__c</fullName>
    <description>Participant&apos;s Session Catchup Date/Time</description>
    <label>Catch-Up Date</label>
    <type>DateTime</type>
</CustomField>