main/default/objects/Session_Participant__c/fields/Confirm_Response_Link__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Response_Link__c</fullName>
    <formula>Domain_Name__c + &quot;/?id=&quot; +  Id + &quot;&amp;response=Confirmed&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirm Response Link</label>
    <type>Text</type>
</CustomField>