main/default/objects/Session_Participant__c/fields/Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Date__c</fullName>
    <description>Confirmation Date</description>
    <label>Confirmed Date</label>
    <type>DateTime</type>
</CustomField>