main/default/objects/Session_Participant__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Contact__r.FirstName+&apos; &apos;+Contact__r.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>