main/default/objects/Session_Participant__c/fields/Decline_Response_Link__c.field-meta.xml
<CustomField>
    <fullName>Decline_Response_Link__c</fullName>
    <formula>Domain_Name__c + &quot;/?id=&quot; +  Id + &quot;&amp;response=Declined&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decline Response Link</label>
    <type>Text</type>
</CustomField>