main/default/objects/Session_Participant__c/fields/Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Declined_Date__c</fullName>
    <description>Decline Date</description>
    <label>Declined Date</label>
    <type>DateTime</type>
</CustomField>