main/default/objects/Session_Participant__c/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <label>Domain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>