main/default/objects/Session_Participant__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipName>Session_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>