main/default/objects/Session_Participant__c/fields/Event_Invite_Delivery_Option__c.field-meta.xml
<CustomField>
    <fullName>Event_Invite_Delivery_Option__c</fullName>
    <formula>TEXT(Event__r.Session_Calendar_Invite_Delivery__c)</formula>
    <label>Event Invite Delivery Option</label>
    <type>Text</type>
</CustomField>