main/default/objects/Session_Participant__c/fields/Invitation_Date__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Invitation Date</label>
    <type>DateTime</type>
</CustomField>