main/default/objects/Session_Participant__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <description>Holds the Rank for each Participant</description>
    <label>Title/Rank</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Branch_of_Service__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>COL</fullName>
            </value>
            <value>
                <fullName>Lt Col</fullName>
            </value>
            <value>
                <fullName>LTC</fullName>
            </value>
            <value>
                <fullName>MAJ</fullName>
            </value>
            <value>
                <fullName>CAPT</fullName>
            </value>
            <value>
                <fullName>1st Lt</fullName>
            </value>
            <value>
                <fullName>2d Lt</fullName>
            </value>
            <value>
                <fullName>CMSgt</fullName>
            </value>
            <value>
                <fullName>SMSgt</fullName>
            </value>
            <value>
                <fullName>MSgt</fullName>
            </value>
            <value>
                <fullName>TSgt</fullName>
            </value>
            <value>
                <fullName>SSgt</fullName>
            </value>
            <value>
                <fullName>SrA</fullName>
            </value>
            <value>
                <fullName>A1C</fullName>
            </value>
            <value>
                <fullName>Amn</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>1LT</fullName>
            </value>
            <value>
                <fullName>2LT</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>SGM</fullName>
            </value>
            <value>
                <fullName>1SG</fullName>
            </value>
            <value>
                <fullName>MSG</fullName>
            </value>
            <value>
                <fullName>SFC</fullName>
            </value>
            <value>
                <fullName>SSG</fullName>
            </value>
            <value>
                <fullName>SGT</fullName>
            </value>
            <value>
                <fullName>CPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>