main/default/objects/Session_Participant__c/fields/Readiness_Self_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Self_Ranking__c</fullName>
    <label>Readiness Self Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novice</fullName>
            </value>
            <value>
                <fullName>Advanced Beginner</fullName>
            </value>
            <value>
                <fullName>Proficient</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
            <value>
                <fullName>Observer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>