main/default/objects/Session_Participant__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Registration Date</label>
    <type>DateTime</type>
</CustomField>