main/default/objects/Session_Participant__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Participant Role</description>
    <label>Session Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>