main/default/objects/Session_Participant__c/fields/Role_Description__c.field-meta.xml
<CustomField>
    <fullName>Role_Description__c</fullName>
    <label>Role Description</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>