main/default/objects/Session_Participant__c/fields/Sent_Calendar_Invite__c.field-meta.xml
<CustomField>
    <fullName>Sent_Calendar_Invite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Calendar Invite</label>
    <type>Checkbox</type>
</CustomField>