main/default/objects/Session_Participant__c/fields/Session_Attendance_Thank_You_Message__c.field-meta.xml
<CustomField>
    <fullName>Session_Attendance_Thank_You_Message__c</fullName>
    <label>Session Attendance Thank You Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>