main/default/objects/Session_Participant__c/fields/Session_Catchup_Reminder_Message__c.field-meta.xml
<CustomField>
    <fullName>Session_Catchup_Reminder_Message__c</fullName>
    <label>Session Catchup Reminder Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>