main/default/objects/Session_Participant__c/fields/Session_Participation__c.field-meta.xml
<CustomField>
    <fullName>Session_Participation__c</fullName>
    <label>Session Participation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distracted</fullName>
            </value>
            <value>
                <fullName>Observed</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Challenged</fullName>
            </value>
            <value>
                <fullName>Progressing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>